[package]
name = "simbolmudah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
]

[dependencies]
itertools = "0.12"
regex = "1.10.2"

# [build-dependencies]
# libx11 = { git = "https://gitlab.freedesktop.org/xorg/lib/libx11.git", tag = "libX11-1.8.6" }
# xcompose = { git = "https://github.com/kragen/xcompose.git", branch = "master" }
# wincompose = { git = "https://github.com/samhocevar/wincompose.git", tag = "0.9.11" }
