[package]
name = "libsimbolmudah-cldr"
version = "0.4.2"
edition = "2021"
publish = false

[dependencies.windows]
version = "0.58"
features = [
    "Globalization",
    "Win32_Foundation",
]

[dependencies]
rkyv = "0.7.45"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"