[package]
name = "libsimbolmudah"
version = "0.3.0"
edition = "2021"
publish = false

[lib]
name = "libsimbolmudah"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
headers = []

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Foundation",
    "Foundation_Collections",
    "System",
    "System_Threading",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies]
windows-core = "0.58.0"
smol_str = "0.2.2"
regex = "1.10.5"
fst = "0.4.7"

[build-dependencies]
windows-bindgen = "0.58"
# libx11 = { git = "https://gitlab.freedesktop.org/xorg/lib/libx11.git", tag = "libX11-1.8.6" }
# xcompose = { git = "https://github.com/kragen/xcompose.git", branch = "master" }
# wincompose = { git = "https://github.com/samhocevar/wincompose.git", tag = "0.9.11" }
