[package]
name = "libsimbolmudah"
version = "0.4.3"
edition = "2021"
publish = false

[lib]
name = "libsimbolmudah"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build-headers = []
build-annotations = []
build-x11-defs = []

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Storage",
    "System",
    "System_Threading",
    "System_UserProfile",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies]
windows-core = "0.59.0"
regex = "1.11.1"
fst = "0.4.7"
concat-idents = "1.1.5"
serde = { version = "1.0.217", features = ["derive"] }
quick-xml = { version = "0.37.1", features = ["serialize"] }
brotli-decompressor = "4.0.2"

[build-dependencies]
windows-bindgen = "0.59"
brotli = "7.0.0"

[profile.release]
lto = true
codegen-units = 1

# libx11 = { git = "https://gitlab.freedesktop.org/xorg/lib/libx11.git", tag = "libX11-1.8.6" }
# xcompose = { git = "https://github.com/kragen/xcompose.git", branch = "master" }
# wincompose = { git = "https://github.com/samhocevar/wincompose.git", tag = "0.9.11" }
